highlight the vulnerable element in the page-view. Still has issues with cross-origin.

--- a/results-view.html
+++ b/results-view.html
@@ -13,14 +13,15 @@
         <table id="results-table">
           <tr>
             <th>url</th>
-            <th>element</th>
+            <th>element query selector</th>
             <th>page name</th>
           </tr>
         </table>
       </div>
       
-      <div id="page-view">
+      <div class="page-view-container">
         <iframe id="page-container"></iframe>
+        <button>highlight vulnerable element</button>
       </div>
     </div>
   </body>
